--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts node src/server.ts",
+    "start": "ts-node src/server.ts",
     "dev": "nodemon --exec ts-node src/server.ts"
   },
   "keywords": [],
