--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,7 @@
     "rootDir": "./src",
     "esModuleInterop": true,
     "strict": true
-  }
+  },
+  "include": ["src/**/*"],
+  "files": ["src/types/express.d.ts"]
 }
