--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.3.0",
+    "json-server": "^0.17.4",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3",
     "ws": "^8.18.3"
   },
   "devDependencies": {
@@ -27,7 +27,6 @@
     "@types/express": "^5.0.5",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
-    "@types/pg": "^8.15.6",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
