--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     runtime: node
     plan: free
     buildCommand: npm install --save-dev @types/express @types/jsonwebtoken && npm run build
-    startCommand: npm start
+    startCommand: node dist/src/server.js
     envVars:
       - key: NODE_ENV
         value: production
